Changed canvas sizing to fix stretching issue.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
 canvas {
  border:5px solid;
- height:500px;
- width:500px;
  }
